--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://dmytrosvarkovskiy.github.io/Filmoteka/",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /Filmoteka-13/"
+    "build": "parcel build src/*.html --public-url /Filmoteka/"
   },
   "repository": {
     "type": "git",
